引入基本依赖，后续需要其他依赖单独引入

--- a/package.json
+++ b/package.json
@@ -10,5 +10,15 @@
     "node"
   ],
   "author": "coderwei",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "koa": "^2.13.4",
+    "koa-body": "^4.2.0",
+    "koa-router": "^10.1.1",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.11.0"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
+  }
 }
