--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ MYSQL_HOST = localhost
 MYSQL_POST = 3306
 MYSQL_USER = root
 MYSQL_HOST_PASSWORD = ''
-MYSQL_HOST_DB = zdsc
+MYSQL_HOST_DB = vue3_cms_api
 
-JWT_SECRET = dw
+JWT_SECRET = coderwei
