--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "coderwei",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "koa": "^2.13.4",
     "koa-body": "^4.2.0",
